# file-toolkit

./: .env  .env.example  .gitignore  .golangci.yml  Dockerfile  ENV_VARS.md  LINTING.md  README.md  convert.go  converter-service.go  go.mod  go.sum  util.go
.github/workflows/: deploy-ecs.yml  docker-build.yml  docker-complete.yml  docker-push.yml  docker-scan.yml  docker.yml  e2e-test.yml  go-lint.yml  go.yml  lint.yml  security.yml  staticcheck.yml
cmd/converter/: converter-service.go  converter_e2e_test.go  util.go
cmd/text_analysis/: README.md  main.py  pyproject.toml
